# LambdaML

./: LambdaML_Showcase.ipynb  README.md  circles.csv  example.py  example_neural_network.py  example_nn.py  lambda_model.py  lambda_utils.py  pyproject.toml
examples/: example_diff_methods.py  example_neural_network.py  example_onnx.py  example_regressor.py  example_tanh_regression.py  neural_network.py
lambdaml/: __init__.py  lambda_model.py  lambda_onnx.py  lambda_utils.py
legacy/: example_neural_network.py  example_tanh_regression.py  lambda_model.py  lambda_utils.py
