[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdaml"
version = "1.0.3"
description = "Gradient-free machine learning for any numpy-compatible function"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ian Chu Te" }]
requires-python = ">=3.8"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
progress = ["tqdm>=4.0"]
examples = ["scipy", "pandas", "matplotlib", "tqdm>=4.0"]

[project.urls]
Repository = "https://github.com/ianchute/LambdaML"

[tool.setuptools.packages.find]
where = ["."]
include = ["lambdaml*"]
