[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdaml"
version = "1.2.0"
description = "Gradient-free machine learning for any numpy-compatible function"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ian Chu Te" }]
requires-python = ">=3.8"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
progress = ["tqdm>=4.0"]
parallel = ["joblib>=1.0"]
speed    = ["tqdm>=4.0", "joblib>=1.0"]
onnx     = ["onnx>=1.14", "onnxruntime>=1.16"]
examples = ["scipy", "pandas", "matplotlib", "tqdm>=4.0", "joblib>=1.0"]
all      = ["tqdm>=4.0", "joblib>=1.0", "onnx>=1.14", "onnxruntime>=1.16",
            "scipy", "pandas", "matplotlib"]

[project.urls]
Repository = "https://github.com/ianchute/LambdaML"

[tool.setuptools.packages.find]
where = ["."]
include = ["lambdaml*"]
